# rai-net-access-battlers-tui

./: Cargo.toml  PROTOCOL.md  README.md  RULE.md
locales/en-US/: ui.ftl
locales/zh-CN/: ui.ftl
src/: i18n.rs  lib.rs  main.rs
src/game/: board.rs  mod.rs  player.rs  state.rs  types.rs
src/net/: client.rs  protocol.rs  server.rs
src/ui/: input.rs  layout.rs  mod.rs  render.rs  state.rs  util.rs
