[package]
name = "rai-net-access-battlers-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fluent-bundle = "0.16"
unic-langid = "0.9"
